# cutie-music

./: .gitignore  CMakeLists.txt  CreatePlaylistWindow.qml  Makefile  Player.qml  README.md  appcore.cpp  appcore.h  coverimageprovider.cpp  coverimageprovider.h  cutie-music  cutie-music.desktop  cutie-music.pro  main.cpp  main.qml  moc_appcore.cpp  qml.qrc  qrc_qml.cpp
assets/: assets.qrc
debian/: control  cutie-music.install
fonts/: fonts.qrc
src/: appcore.cpp  appcore.h  coverimageprovider.cpp  coverimageprovider.h  main.cpp
src/qml/: Player.qml  main.qml
translations/: cutie-music_fi.ts
